# SAPIENS

./: ARCHITECTURE.md  LICENSE  MCP-INTEGRATION.md  PROVENANCE.md  README.md  ROADMAP.md  VALIDATION.md  grok-live-probe.json  index.html  permissions.json  pyproject.toml  results.json
.github/workflows/: ci.yml  deploy-site.yml  release.yml
demos/ledger-grok/: README.md  SHA256SUMS  run_demo.py  verify_ledger.py
demos/ledger-grok/data/: README.md  kepler10_kic11904151_q1_lc.csv
demos/ledger-grok/site/: SHA256SUMS  index.html
demos/ledger-grok/tests/: test_lg_artifacts.py  test_lg_grok_adapter.py  test_lg_ledger.py  test_lg_pipeline.py
mcp/sapiens_ledger_mcp/: __init__.py  server.py  tools.py
mcp/tests/: test_mcp_server.py  test_mcp_tools.py
src/sapiens/: __init__.py  adapter.py  calibration.py  catchrate.py  checkpoints.py  cli.py  confidence.py  discovery.py  fixtures.py  isolation.py  kernel.py  ledger.py  models.py  permissions.py  registry.py  review.py  reviewers.py  validation.py
src/sapiens/adapters/: __init__.py  (+3 more)
tests/: isolation_doubles.py  test_boundaries.py  test_calibration_confidence.py  test_catchrate.py  test_checkpoints.py  test_discovery_driver.py  test_gates_nulls_thresholds.py  test_gates_phases345.py  test_gates_pipeline_gaming.py  test_gates_promotion.py  test_gates_stats.py  test_isolation.py  test_kepler_adapter.py  test_kepler_integration.py  test_kernel_gates.py  test_kernel_isolation.py  test_kernel_panel.py  test_permissions.py  test_photometry_adapter.py  test_registry.py  test_review.py  test_reviewers.py  test_validation.py
(+23 files in other folders)
