[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sapiens-discovery"
version = "0.5.0"
description = "Experimental foundation for traceable cross-domain scientific-discovery workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "The Beast AGI Engineering" }]
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "ruff>=0.6,<1"]

[project.scripts]
sapiens = "sapiens.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sapiens = ["adapters/data/*.csv", "adapters/data/*.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests", "demos/ledger-grok/tests", "mcp/tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
